--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,14 @@
 org.gradle.jvmargs=-Xmx2G
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.10
-loader_version=0.15.3
-mod_version=1.0.0
+minecraft_version=1.20.4
+yarn_mappings=1.20.4+build.3
+loader_version=0.15.5
+mod_version=69.69.69
 maven_group=com.chyzman
-archives_base_name=chowl
+archives_base_name=chowl-industries
 fabric_version=0.90.0+1.20.1
-owo_version=0.11.2+1.20
-me_version = 0.1.1
+owo_version=0.12.3+1.20.3
 cpa_version = 1.0.0
-sodium_version=mc1.20.1-0.5.3
+sodium_version=mc1.20.3-0.5.5
 mythicmetals_version=0.19.2+1.20.1
-lavender_version=0.1.0-pre.18+1.20
+lavender_version=0.1.1+1.20.3
 no_indium_version=1.1.0+1.20
