--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ mod_version=69.69.69
 maven_group=com.chyzman
 archives_base_name=chowl-industries
 fabric_version=0.94.0+1.20.4
-owo_version=0.12.3+1.20.3
+owo_version=0.12.4-pre.1+1.20.3
 cpa_version = 1.0.0
 sodium_version=mc1.20.3-0.5.5
 mythicmetals_version=0.19.2+1.20.1
